# cloudflare-worker-rust

./: Cargo.toml  README.md  wrangler.toml
.cursor/: cursor_rules.json
migrations/: init.sql
src/: lib.rs  models.rs
