[package]
name = "cloudflare-worker-rs"
version = "0.1.0"
edition = "2021"
authors = [ "Fea.Hsu <fea.hsu@itnode.cn>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.8.1", default-features = false, features = ["json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.139"
serde = { version = "1.0", features = ["derive"] }
